# cmake

./: .gitignore  AGENTS.md  OAT.xml  README.md  SECURITY.md  build.sh  classify_rule.yaml
docs/: README.md  architecture.md
docs/framework/: getting-started.md  public-api.md
docs/scripts/: build-analysis.md  sign-guide.md  sign-internals.md
docs/superbuild/: getting-started.md  internals.md
function/: _check_size_limit.cmake  function.cmake  prepare.cmake
intf_pub/: intf_pub_linux.cmake
modules/: Findacl_extend.cmake  Findacl_mdl.cmake  Findacl_rt.cmake  Findacl_rtc.cmake  Findadump.cmake  Findaicpu.cmake  Findaicpu_context.cmake  Findaicpu_sharder.cmake  Findaihac_codegen.cmake  Findasc_devkit.cmake  Findascend_dump.cmake  Findascend_hal.cmake  Findascendc_runtime.cmake  Findascendcl.cmake  Findatrace.cmake  Findautofuse.cmake  Findc_mmpa.cmake  Findcann_version.cmake  Finderror_manager.cmake  Findge_compiler.cmake  Findge_runner.cmake  Findgraph.cmake  Findhccl.cmake  Findhcomm.cmake  Findmetadef.cmake  Findmmpa.cmake  Findmsprof.cmake  Findnnopbase.cmake  Findopbase.cmake  Findoptiling.cmake  Findplatform.cmake  Findruntime.cmake  Findsecurec.cmake  Findslog.cmake  Findtiling_api.cmake  Findtilingdata_base.cmake  Findtsdclient.cmake  Findunified_dlog.cmake
scripts/build_analysis/: README_iwyu_log_parser.md  iwyu_log_parser.py
scripts/build_analysis/tests/: __init__.py  conftest.py  test_iwyu_log_parser.py
scripts/install/: common_interface.sh  version_compatiable.inc
scripts/package/: check_build_dependencies.py  filelist.py  gen_postinst_prerm.py  generate_version_header.sh  json_merger.py  makeself.cmake  merge_binary_info_config.py  package.py  packer.py  pkg_parser.py  post_package.cmake  pre_package.cmake  version_info.py
scripts/package/tests/: __init__.py  conftest.py  test_check_build_dependencies.py  test_comm_log.py  test_filelist_extended.py  test_filelist_validation.py  test_funcbase_utils.py  test_gen_postinst_prerm.py  test_generate_version_info.py  test_json_merger.py  test_merge_binary_info_config.py  test_package.py  test_package_install_types.py  test_pkg_parser_and_packer.py  test_version_info_and_filelist.py
scripts/package/utils/: comm_log.py  pkg_utils.py
scripts/sign/: add_header_sign.py  common_log.py  community_sign_build.py
scripts/sign/tests/: conftest.py  test_add_header_sign.py  test_community_sign_build.py
scripts/signtool/esbc_header/: esbc_header.py
scripts/signtool/image_extract/: ci_img_headler.py
scripts/signtool/image_pack/: image_pack.py  ini_gen.py  tools.py
scripts/signtool/image_pack/hi_platform/: platform.py
scripts/version/: check_build_dependencies.py  generate_package_ini.py  generate_version_info.py
superbuild/: CMakeLists.txt  build_ext.sh  config.cmake  device.cmake  host.cmake  sub_project.cmake
superbuild/device/: CMakeLists.txt
superbuild/libraries/: .gitkeep
toolchain/: aarch64-hcc-toolchain.cmake
